--- a/views/goodCatches/list.ejs
+++ b/views/goodCatches/list.ejs
@@ -2,10 +2,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
+  <link rel="icon" href="data:;base64,iVBORw0KGgo=">
   <title>GoodCatch List</title>
 </head>
 <body>
-  <h1>GoodCatch List for <%= user.username %></h1> <!-- This displays the username -->
+  <%- include("../partials/_navbar.ejs") %>
+  <h1>GoodCatch List for <%= user.username %></h1>  
   <ul>
     <% goodCatches.forEach(goodCatch => { %>
       <li>
@@ -13,7 +16,7 @@
         <strong>Department:</strong> <%= goodCatch.department %><br />
         <strong>Area:</strong> <%= goodCatch.area %><br />
         <strong>Events:</strong> <%= goodCatch.events %><br />
-        <strong>Created by:</strong> <%= goodCatch.creationUser.username %> <!-- Displays the creator's username -->
+        <strong>Created by:</strong> <%= goodCatch.creationUser.username %>  
       </li>
     <% }) %>
   </ul>
