troubleshooting routes one at a time. Have sign in, sign up and list of user's goodCatch records.

--- a/views/goodCatches/edit.ejs
+++ b/views/goodCatches/edit.ejs
@@ -7,7 +7,8 @@
   <link rel="stylesheet" href="/stylesheets/style.css" />
   <title>Edit GoodCatch</title>
 </head>
-<body>
+<body><div style="background: yellow; padding: 10px;">Navbar Test</div>
+
   <div class="form-container">
     <h1>Edit GoodCatch</h1>
     <form action="/users/:userId/goodCatch/:id?_method=PUT" method="POST">
