--- a/views/goodCatches/new.ejs
+++ b/views/goodCatches/new.ejs
@@ -7,7 +7,8 @@
   <link rel="stylesheet" href="/stylesheets/style.css" />
   <title>Create New GoodCatch</title>
 </head>
-<body>
+<body><div style="background: yellow; padding: 10px;">Navbar Test</div>
+
   <div class="form-container">
     <h1>Create a New GoodCatch</h1>
     <form action="/users/:userId/goodCatch" method="POST">
