--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
     <link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
     <title>Home Page</title>
   </head>
