--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -1,18 +1,10 @@
 <nav class="navbar">
   <ul>
-    <% if (user) { %>
-      <% if (currentPage === "goodCatchList") { %>
-        <li><a href="/users/<%= user._id %>/goodCatch/new">Create New</a></li>
-        <li><a href="#">Edit</a></li>
-        <li><a href="/auth/sign-out">Sign Out</a></li>
-      <% } else { %>
-        <li><a href="/">Home</a></li>
-        <li><a href="/users/<%= user._id %>/goodCatch">My Catches</a></li>
-        <li><a href="/auth/sign-out">Sign Out</a></li>
-      <% } %>
-    <% } else { %>
-      <li><a href="/auth/sign-in">Sign In</a></li>
-      <li><a href="/auth/sign-up">Sign Up</a></li>
-    <% } %>
+    <li><a href="/goodCatch/new">Create New</a></li>
+    <li><a href="/auth/sign-out">Sign Out</a></li>
+    <li><a href="/">Home</a></li>
+    <li><a href="/goodCatch">My Catches</a></li>
+    <li><a href="/auth/sign-in">Sign In</a></li>
+    <li><a href="/auth/sign-up">Sign Up</a></li>
   </ul>
 </nav>
