successful Db goodCatch POST.

--- a/views/goodCatches/edit.ejs
+++ b/views/goodCatches/edit.ejs
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="data:;base64,iVBORw0KGgo=">
   <link rel="stylesheet" href="/stylesheets/style.css" />
+  <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
   <title>Edit GoodCatch</title>
 </head>
 <body><div style="background: yellow; padding: 10px;">Navbar Test</div>
