--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
     <link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
+    <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
     <title>Home Page</title>
   </head>
   <body class="index-body">
