--- a/views/goodCatches/new.ejs
+++ b/views/goodCatches/new.ejs
@@ -1,56 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/stylesheets/style.css" />
-  <title>Create New GoodCatch</title>
-</head> <%- include('../partials/_navbar.ejs') %>
-<body><div style="background: yellow; padding: 10px;">Navbar Test</div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/stylesheets/style.css" />
+    <title>Create New GoodCatch</title>
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
+  </head>
+  <%- include('../partials/_navbar.ejs') %>
+  <body>
+    <div style="background: yellow; padding: 10px">Navbar Test</div>
 
-  <div class="form-container">
-    <h1>Create a New GoodCatch</h1>
-    <form action="/goodCatch" method="POST">
-      <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
-      <div>
-        <label for="site">Site</label>
-        <select id="site" name="site">
-          <option value="Baldwin Park">Baldwin Park</option>
-          <option value="Carpinteria">Carpinteria</option>
-          <option value="Boston">Boston</option>
-          <option value="Shenzhen">Shenzhen</option>
-          <option value="Minnetonka">Minnetonka</option>
+    <div class="form-container">
+      <h1>Create a New GoodCatch</h1>
+      <form action="/goodCatch" method="POST">
+        <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
+        <div>
+          <label for="site">Site</label>
+          <select id="site" name="site">
+            <option value="Baldwin Park">Baldwin Park</option>
+            <option value="Carpinteria">Carpinteria</option>
+            <option value="Boston">Boston</option>
+            <option value="Shenzhen">Shenzhen</option>
+            <option value="Minnetonka">Minnetonka</option>
+          </select>
+        </div>
+
+        <div>
+          <label for="department">Department</label>
+          <select id="department" name="department">
+            <option value="Warehouse">Warehouse</option>
+            <option value="Shop Floor">Shop Floor</option>
+            <option value="HR">HR</option>
+            <option value="Customer Service">Curstomer Service</option>
+            <option value="Front Office">Front Office</option>
+          </select>
+        </div>
+        >
+
+        <label for="area">Area:</label>
+        <input type="text" name="area" id="area" required />
+
+        <select id="category" name="category">
+          <option value="Slip and Fall">Slip and Fall</option>
+          <option value="Toxic Spill">Toxic Spill</option>
+          <option value="Chemicals w/o MSDS">Chemicals w/o MSDS</option>
+          <option value="Storage Fall Hazard">Storage Fall Hazard</option>
+          <option value="Machine Malfunction">Machine Malfunction</option>
         </select>
-      </div>
-          
-      <div>
-        <label for="department">Department</label>
-        <select id="department" name="department">
-          <option value="Warehouse">Warehouse</option>
-          <option value="Shop Floor">Shop Floor</option>
-          <option value="HR">HR</option>
-          <option value="Customer Service">Curstomer Service</option>
-          <option value="Front Office">Front Office</option>
-        </select></div>>
 
-      <label for="area">Area:</label>
-      <input type="text" name="area" id="area" required />
+        <label for="description">Description:</label>
+        <textarea name="description" id="description" required></textarea>
 
-      <select id="category" name="category">
-        <option value="Slip and Fall">Slip and Fall</option>
-        <option value="Toxic Spill">Toxic Spill</option>
-        <option value="Chemicals w/o MSDS">Chemicals w/o MSDS</option>
-        <option value="Storage Fall Hazard">Storage Fall Hazard</option>
-        <option value="Machine Malfunction">Machine Malfunction</option>
-      </select>
-
-      <label for="description">Description:</label>
-      <textarea name="description" id="description" required></textarea>
-
-
-
-      <button type="submit">Create</button>
-    </form>
-  </div>
-</body>
+        <button type="submit">Create</button>
+      </form>
+    </div>
+  </body>
 </html>
