--- a/views/test.ejs
+++ b/views/test.ejs
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Test Navbar</title>
-  </head>
-  <body>
-    <h1>Test Page</h1>
-    <%- include("partials/_navbar.ejs") %>
-    <p>Below should be the navbar.</p>
-  </body>
-</html>
+<nav class="navbar">
+  <ul>
+    <li><a href="/goodCatch/new">Create New</a></li>
+    <li><a href="/auth/sign-out">Sign Out</a></li>
+    <li><a href="/">Home</a></li>
+    <li><a href="/goodCatches">List of My Catches</a></li>
+    <li><a href="/auth/sign-in">Sign In</a></li>
+    <li><a href="/auth/sign-up">Sign Up</a></li>
+  </ul>
+</nav>
