--- a/views/goodCatches/deletelist.ejs
+++ b/views/goodCatches/deletelist.ejs
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <link rel="stylesheet" href="../stylesheets/style.css" />
+  <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/stylesheets/style.css" />
+
   <title>Delete Records</title>
 </head>
 <body>
