--- a/views/goodCatches/editlist.ejs
+++ b/views/goodCatches/editlist.ejs
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/stylesheets/style.css" />
+    <link rel="stylesheet" href="../stylesheets/style.css" />
+    <link rel="icon" href="/favicon.ico" />
     <title>Edit Records</title>
   </head>
   <body>
