--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -1,7 +1,8 @@
 <nav class="navbar">
   <ul>
     <li><a href="/goodCatch/new">Create New</a></li>
-    <li><a href="/dashboard">List by Category</a></li>
+    <li><a href="/goodCatch/dashboard">List by Category</a></li>
+    <li><a href="/goodCatch">Edit and Delete</a></li>
     <li><a href="/auth/sign-in">Sign In</a></li>
     <li><a href="/auth/sign-up">Sign Up</a></li>
     <li><a href="/auth/sign-out">Sign Out</a></li>
