--- a/views/auth/sign-in.ejs
+++ b/views/auth/sign-in.ejs
@@ -8,16 +8,20 @@
     <title>Sign In</title>
   </head>
   <body>
-    <div class="login-form-container">
-      <form action="/auth/sign-in" method="POST">
-        <h1>Welcome Back, Friend</h1>
-        <label for="username">Username:</label>
-        <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
-        <input type="text" name="username" id="username" required />
-        <label for="password">Password:</label>
-        <input type="password" name="password" id="password" required />
-        <button type="submit">Sign in</button>
-      </form>
-    </div>
+    <form action="/auth/sign-in" method="POST" class="">
+      <h1>Welcome</h1>
+      <!-- Hidden input for CSRF token -->
+      <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
+      <div class="sign-up-form">
+        <div class="form-grid-auth">
+          <label for="username">Username:</label>
+          <input type="text" name="username" id="username" required />
+
+          <label for="password">Password:</label>
+          <input type="password" name="password" id="password" required />
+        </div>
+      </div>
+      <button type="submit" class="submit-btn">Sign In</button>
+    </form>
   </body>
 </html>
